[gd_scene load_steps=2 format=3 uid="uid://bpankxymenwob"]

[ext_resource type="Script" uid="uid://tq0xoi82kak1" path="res://menus/pause_menu.gd" id="1_s0u37"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_s0u37")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.768627)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -23.5
offset_right = 53.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 28
text = "Game Paused"

[node name="Resume" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
